Update docs/ by running make